finished with lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -69,9 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Initialize an instance of our shopping cart class\n",
@@ -132,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +137,7 @@
        "45.99"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +157,7 @@
        "56.49"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +177,30 @@
        "206.49"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "shopping_cart.add_item(\"jeans\", 50.00, 3) # 206.49"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'rainbow sandals', 'price': 45.99}, {'name': 'agyle socks', 'price': 10.5}, {'name': 'jeans', 'price': 50.0}, {'name': 'jeans', 'price': 50.0}, {'name': 'jeans', 'price': 50.0}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shopping_cart.items)"
    ]
   },
   {
@@ -211,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +233,7 @@
        "41.298"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +253,7 @@
        "50.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,19 +280,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.0\n",
-      "60.0\n",
-      "48.0\n",
-      "1060.0\n",
-      "848.0\n",
-      "Sorry, there is no discount to apply to your cart :(\n"
+      "65.0\n",
+      "80.0\n",
+      "None\n",
+      "1080.0\n",
+      "None\n",
+      "None\n"
      ]
     }
    ],
@@ -291,6 +304,13 @@
     "print(discount_shopping_cart.add_item(\"macbook air\", 1000.00)) # 1060.00\n",
     "print(discount_shopping_cart.apply_discount()) # 848.00\n",
     "print(shopping_cart.apply_discount()) # Sorry, there is no discount to apply to your cart :("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'm not understanding this question: when it sets the ShoppingCart instance to 20, the functions thing it's setting my total to 20 dollars, so everything is 20 dollars more than it should be. Asked question on Slack; will update if I get an answer. "
    ]
   },
   {
@@ -329,6 +349,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'There are no items in your cart!'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ran this code before adding anything to my cart to make sure \n",
+    "#the conditional worked\n",
+    "shopping_cart.void_last_item()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -353,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
